# OoE-Plugin

./: .gitignore  CMakeLists.txt  README.md  exports.yml
common/: CMakeLists.txt  exports.yml
common-nonpdrm/: CMakeLists.txt
common-nonpdrm/src/: map.c  plate.c
common-nonpdrm/src/headers/: myio.h
common-user/: CMakeLists.txt
common-user/src/: log.c  map.c  plate.c
common/src/: log.c  rbtree.c
common/src/headers/: codes.h  constants.h  file.h  log.h  plate.h  rbtree.h
nonpdrm/: CMakeLists.txt  exports.yml
nonpdrm/src/: main.c  myio.c
src/: bin.c  hook.c  hook_strings.c  log.c  main.c
src/headers/: codes.h  constants.h  hook.h  log.h
user/: CMakeLists.txt  exports.yml
user/src/: bin.c  hook.c  hook_func_impt.c  hook_strings.c  main.c
user/src/headers/: bin.h  hook.h
